[project]
name = "linkedin_post_generator"
version = "0.1.0"
description = "linkedin_post_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
linkedin_post_generator = "linkedin_post_generator.main:run"
run_crew = "linkedin_post_generator.main:run"
train = "linkedin_post_generator.main:train"
replay = "linkedin_post_generator.main:replay"
test = "linkedin_post_generator.main:test"
run_with_trigger = "linkedin_post_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
